# Champ_IQ

./: .gitignore  ChampIQ_Capability_Plan.md  ChampIQ_Use_Cases.md  plan_v2.md
champiq-canvas/apps/api/: .env.example  docker-entrypoint.sh  pyproject.toml
champiq-canvas/apps/api/alembic/: env.py
champiq-canvas/apps/api/alembic/versions/: 0003_champmail.py  0004_champmail_sender_credential.py  0005_app_settings.py  0006_event_provider_id.py
champiq-canvas/apps/api/champiq_api/: container.py  database.py  main.py  models.py
champiq-canvas/apps/api/champiq_api/b2bpulse/: __init__.py  agent_store.py  executor.py  local_scraper.py  ports.py  remote.py  router.py
champiq-canvas/apps/api/champiq_api/champgraph/: __init__.py  node.py  service.py
champiq-canvas/apps/api/champiq_api/champmail/: __init__.py  models.py  schemas.py
champiq-canvas/apps/api/champiq_api/champmail/nodes/: __init__.py  champmail_node.py
champiq-canvas/apps/api/champiq_api/champmail/rendering/: __init__.py  template_renderer.py  unsubscribe_token.py
champiq-canvas/apps/api/champiq_api/champmail/repositories/: __init__.py  enrollments.py  events.py  prospects.py  senders.py  sends.py  sequences.py  templates.py
champiq-canvas/apps/api/champiq_api/champmail/routers/: __init__.py  analytics.py  credentials.py  enrollments.py  prospects.py  senders.py  sends.py  sequences.py  templates.py  unsubscribe.py  webhooks.py
champiq-canvas/apps/api/champiq_api/champmail/scheduling/: __init__.py  cadence_job.py
champiq-canvas/apps/api/champiq_api/champmail/services/: __init__.py  cadence_service.py  enrollment_service.py  (+4 more)
champiq-canvas/apps/api/champiq_api/credentials/: service.py
champiq-canvas/apps/api/champiq_api/drivers/: __init__.py  _elevenlabs_agents.py  base.py  champgraph.py  champmail.py  champvoice.py  lakeb2b.py
champiq-canvas/apps/api/champiq_api/expressions/: __init__.py  diagnostics.py  engine.py
champiq-canvas/apps/api/champiq_api/nodes/: __init__.py  _loop_helpers.py  champmail_reply.py  code.py  csv_upload.py  flow.py  http.py  llm.py
champiq-canvas/apps/api/champiq_api/routers/: auth_lakeb2b.py  chat.py  credentials.py  settings.py  tools.py  uploads.py  workflows.py
champiq-canvas/apps/api/champiq_api/runtime/: __init__.py  bus.py  fan_out.py  memory_collector.py  orchestrator.py
champiq-canvas/apps/api/champiq_api/triggers/: janitor.py  scheduler.py
champiq-canvas/apps/api/tests/: conftest.py  contract_snapshot.json  test_elevenlabs_agent_resolver.py  test_expression_diagnostics.py  test_fan_out_propagation.py  test_route_contract.py
v2/services/ai-engine/: Dockerfile  pyproject.toml
v2/services/ai-engine/champiq_v2/: __init__.py  config.py  main.py
v2/services/ai-engine/champiq_v2/api/: dependencies.py
v2/services/ai-engine/champiq_v2/graph/: edges.py  entities.py  graphiti_service.py  service.py
v2/services/ai-engine/champiq_v2/llm/: service.py
v2/services/ai-engine/champiq_v2/scoring/: champ_scorer.py
v2/services/ai-engine/champiq_v2/utils/: json_utils.py  timezone.py
v2/services/ai-engine/champiq_v2/workers/: __init__.py  base.py  context_builder.py  imap_worker.py  pitch_worker.py  research_worker.py  smtp_worker.py  summary_worker.py  voice_worker.py
(+148 files in other folders)
